--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # url启动库 https://pub.dev/packages/url_launcher/install
+  url_launcher: ^6.0.2
+  # 深度链接 https://pub.dev/packages/uni_links/install
+  uni_links: ^0.4.0
+  # Flutter 阿里闲鱼redux数据流框架 https://github.com/alibaba/fish-redux
+  fish_redux: ^0.3.6
 
 dev_dependencies:
   flutter_test:
